--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <a href="https://github.com/Jim-Young6709">Github</a> | 
     <a href="https://www.linkedin.com/in/jiahui-jim-yang-0666542a0/">LinkedIn</a> |
     <a href="https://x.com/Jiahui_Yang6709">Twitter</a> <br/>
-    <p align=center style="margin-top:-8px;" ><a href="https://x.com/Jiahui_Yang6709" class="twitter-follow-button" data-show-count="false">Follow @Jiahui_Yang6709</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
+    <!-- <p align=center style="margin-top:-8px;" ><a href="https://x.com/Jiahui_Yang6709" class="twitter-follow-button" data-show-count="false">Follow @Jiahui_Yang6709</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p> -->
     </p>
     </td>
     <td width="68%" valign="top" align="justify">
@@ -118,7 +118,7 @@
         <p>
             Previously, I worked closely with <a href="https://www.eecs.mit.edu/people/yufeng-kevin-chen/">Prof. Kevin Chen</a> at <a href="https://www.eecs.mit.edu/">MIT EECS</a>, <!--or <a href="https://www.rle.mit.edu/">MIT RLE</a> -->
             , <a href="https://scholar.google.com/citations?user=HQ6j-KsAAAAJ&hl=en">Prof. Wei Zhang</a> at <a href="https://www.sustech.edu.cn/en/">SUSTech</a>, 
-            and <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Prof. Wenzeng Zhang</a> at <a href="">Tsinghua University</a>(now at X-Institute).
+            and <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Prof. Wenzeng Zhang</a> at <a href="">Tsinghua University</a> (now at X-Institute).
         </p>
         <p> Feel free to contact me via email! You can reach me at jiahuiya -at- andrew dot cmu dot edu</p>
         </p>
@@ -130,6 +130,7 @@
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
   <tr><td><sectionheading>&nbsp;&nbsp;Publications </sectionheading></td></tr>
+  <br/><p>* denotes equal contribution</p>
 </table>
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
 <br/>
@@ -157,7 +158,7 @@
 
 <tr>
     <td width="33%" valign="top" align="center"><a href="https://bidex-teleop.github.io/"><img src="Bidex gif"
-        alt="sym" width="90%" style="border-radius:15px"></a></td>
+        alt="Bidex" width="90%" style="border-radius:15px"></a></td>
   <td width="100%" valign="top">
     <p>
       <a href="https://bidex-teleop.github.io/">
