--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 
 <hr/>
 
+<tr><td><sectionheading>&nbsp;&nbsp;Publications </sectionheading></td></tr>
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-  <tr><td><sectionheading>&nbsp;&nbsp;Publications </sectionheading></td></tr>
-  <br/><p>* denotes equal contribution</p>
+  <p>* denotes equal contribution</p>
 </table>
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
 <br/>
