--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <p>
             Previously, I worked closely with <a href="https://www.eecs.mit.edu/people/yufeng-kevin-chen/">Prof. Kevin Chen</a> at <a href="https://www.eecs.mit.edu/">MIT EECS</a>, <!--or <a href="https://www.rle.mit.edu/">MIT RLE</a> -->
             , <a href="https://scholar.google.com/citations?user=HQ6j-KsAAAAJ&hl=en">Prof. Wei Zhang</a> at <a href="https://www.sustech.edu.cn/en/">SUSTech</a>, 
-            and <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Prof. Wenzeng Zhang</a> at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> (now at X-Institute).
+            and <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Prof. Wenzeng Zhang</a> at <a href="">Tsinghua University</a> (now at X-Institute).
         </p>
         <p> Feel free to contact me via email! You can reach me at jiahuiya -at- andrew dot cmu dot edu</p>
         </p>
@@ -128,10 +128,10 @@
 
 <hr/>
 
-<tr><td><sectionheading>&nbsp;&nbsp;Publications </sectionheading></td></tr>
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-  <p>* denotes equal contribution</p>
+  <tr><td><sectionheading>&nbsp;&nbsp;Publications </sectionheading></td></tr>
 </table>
+<p>* denotes equal contribution</p>
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
 <br/>
 
