--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
   <tr><td><sectionheading>&nbsp;&nbsp;Publications </sectionheading></td></tr>
 </table>
-<p>* denotes equal contribution</p>
+<!-- <p>* denotes equal contribution</p> -->
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
 <br/>
 
