adding previous papers

--- a/index.html
+++ b/index.html
@@ -151,13 +151,15 @@
       <a href="https://www.cs.cmu.edu/~rsalakhu/">Ruslan Salakhutdinov</a>,
       <a href="https://www.cs.cmu.edu/~dpathak/">Deepak Pathak</a>
       <br>
-      <a href="https://mihdalal.github.io/neuralmotionplanner/">site</a> 
+      <a href="">arXiv</a> |
+      <a href="https://mihdalal.github.io/neuralmotionplanner/">site</a> |
+      <a href="https://github.com/mihdalal/neuralmotionplanner">code</a>
     </p>
   </td>
 </tr>
 
 <tr>
-    <td width="33%" valign="top" align="center"><a href="https://bidex-teleop.github.io/"><img src="Bidex gif"
+    <td width="33%" valign="top" align="center"><a href="https://bidex-teleop.github.io/"><img src="images/bidex.png"
         alt="Bidex" width="90%" style="border-radius:15px"></a></td>
   <td width="100%" valign="top">
     <p>
@@ -173,8 +175,55 @@
       <a href="https://haoyu-x.github.io/">Haoyu Xiong</a>,
       <a href="https://devendrachaplot.github.io/">Russell Mendonca</a>,
       <a href="https://www.cs.cmu.edu/~dpathak/">Deepak Pathak</a>
+      <em> Conference on Robot Learning (CoRL), </em> 2024 <font color="red"></font>
       <br>
-      <a href="https://mihdalal.github.io/neuralmotionplanner/">site</a> 
+      <a href="https://bidex-teleop.github.io/">site</a>
+    </p>
+  </td>
+</tr>
+
+<tr>
+    <td width="33%" valign="top" align="center"><a href="https://ieeexplore.ieee.org/abstract/document/10160310"><img src="images/power_circuit.png"
+        alt="Bidex" width="90%" style="border-radius:15px"></a></td>
+  <td width="100%" valign="top">
+    <p>
+      <a href="https://ieeexplore.ieee.org/abstract/document/10160310">
+        <papertitle>A lightweight high-voltage boost circuit for soft-actuated micro-aerial-robots</papertitle>
+      </a>
+      <br>
+      <a href="https://zhijianr.mit.edu/">Zhijian Ren</a>,
+      <strong>Jiahui Yang</strong>,
+      <a href="https://smrl.mit.edu/people/">Suhan Kim</a>,
+      <a href="https://smrl.mit.edu/people/">Yi-Hsuan Hsiao</a>,
+      <a href="https://www.eecs.mit.edu/people/jeffrey-lang/">Jeffrey Lang</a>,
+      <a href="ttps://www.eecs.mit.edu/people/yufeng-kevin-chen/">Yufeng Chen</a>,
+      <br>
+      <em> International Conference on Robotics and Automation (ICRA), </em> 2023 <font color="red"></font>
+      <br>
+      <a href="https://ieeexplore.ieee.org/abstract/document/10160310">paper</a>
+    </p>
+  </td>
+</tr>
+
+<tr>
+    <td width="33%" valign="top" align="center"><a href="https://arxiv.org/abs/2304.00234"><img src="images/mmra.png"
+        alt="Bidex" width="90%" style="border-radius:15px"></a></td>
+  <td width="100%" valign="top">
+    <p>
+      <a href="https://arxiv.org/abs/2304.00234">
+        <papertitle>Coordinated Defense Allocation in Reach-Avoid Scenarios with Efficient Online Optimization</papertitle>
+      </a>
+      <br>
+      <a>Junwei Liu</a>,
+      <a>Zikai Ouyang</a>,
+      <strong>Jiahui Yang</strong>,
+      <a>Hua Chen</a>,
+      <a>Haibo Lu</a>,
+      <a>Wei Zhang</a>,
+      <br>
+      <em> arXiv, </em> 2023 <font color="red"></font>
+      <br>
+      <a href="https://arxiv.org/abs/2304.00234">paper</a>
     </p>
   </td>
 </tr>
