--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <br>
       <a href="https://mihdalal.github.io/">Murtaza Dalal*</a>, 
       <strong>Jiahui Yang*</strong>,
-      <a href="https://devendrachaplot.github.io/">Russell Mendonca</a>,
+      <a href="https://russellmendonca.github.io/">Russell Mendonca</a>,
       <a href="https://www.linkedin.com/in/youssefkhaky/">Youssef Khaky</a>,
       <a href="https://www.cs.cmu.edu/~rsalakhu/">Ruslan Salakhutdinov</a>,
       <a href="https://www.cs.cmu.edu/~dpathak/">Deepak Pathak</a>
@@ -173,7 +173,7 @@
       <a href="https://www.mohansrirama.com/">Mohan Kumar Srirama</a>,
       <a>Ray Liu</a>,
       <a href="https://haoyu-x.github.io/">Haoyu Xiong</a>,
-      <a href="https://devendrachaplot.github.io/">Russell Mendonca</a>,
+      <a href="https://russellmendonca.github.io/">Russell Mendonca</a>,
       <a href="https://www.cs.cmu.edu/~dpathak/">Deepak Pathak</a>
       <br>
       <em> Conference on Robot Learning (CoRL), </em> 2024 <font color="red"></font>
