--- a/index.html
+++ b/index.html
@@ -229,6 +229,25 @@
   </td>
 </tr>
 
+<tr>
+    <td width="33%" valign="top" align="center"><a href="https://patents.google.com/patent/CN216266087U/en"><img src="images/finger.png"
+        alt="Bidex" width="90%" style="border-radius:15px"></a></td>
+  <td width="100%" valign="top">
+    <p>
+      <a href="https://patents.google.com/patent/CN216266087U/en">
+        <papertitle>Parallel connecting rod mode switching parallel clamp coupling self-adaptive robot finger device</papertitle>
+      </a>
+      <br>
+      <strong>Jiahui Yang</strong>,
+      <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Wenzeng Zhang</a>,
+      <br>
+      <em> China Patent CN216266087U, </em> 2022 <font color="red"></font>
+      <br>
+      <a href="https://patents.google.com/patent/CN216266087U/en">PDF</a>
+    </p>
+  </td>
+</tr>
+
 </table>
 <hr/>
 
