--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@
 </table>
 <hr/>
 
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=e6HvNo4fCXZRnQwP4F2HbaEu_oROKG48hPA9vdQJx9s&cl=ffffff&w=a"></script>
+
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="2">
     <tr><td><br><p align="right"><font size="1.5">
     Modified version of template from <a href="http://www.cs.berkeley.edu/~barron/">here</a>
