--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <td style="padding:20px;width:100%;vertical-align:middle">
     <heading>News</heading>
    <p>
-    [09/2024] We <a href="https://www.linkedin.com/posts/carnegie-mellon-university_carnegie-mellon-university-welcomed-google-activity-7242316975455051776-ROwS?utm_source=share&utm_medium=member_desktop">demoed</a> Neural MP to the CEO of Google, Sundar Pichai, while he was visiting CMU.
+    [09/2024] We <a href="https://www.linkedin.com/posts/carnegie-mellon-university_carnegie-mellon-university-welcomed-google-activity-7242316975455051776-ROwS?utm_source=share&utm_medium=member_desktop">demoed</a> Neural MP to the CEO of Google, Sundar Pichai, while he was visiting CMU!
    <br>
 		[08/2023] Joined CMU RI as a graduate student.
    </p>
