--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
 </tr>
 
 <tr>
-    <td width="33%" valign="top" align="center"><a href="https://patents.google.com/patent/CN216266087U/en"><img src="images/finger.png"
+    <td width="33%" valign="top" align="center"><a href="https://patents.google.com/patent/CN113954111A/en"><img src="images/finger.png"
         alt="Bidex" width="90%" style="border-radius:15px"></a></td>
   <td width="100%" valign="top">
     <p>
-      <a href="https://patents.google.com/patent/CN216266087U/en">
+      <a href="https://patents.google.com/patent/CN113954111A/en">
         <papertitle>Parallel connecting rod mode switching parallel clamp coupling self-adaptive robot finger device</papertitle>
       </a>
       <br>
@@ -254,7 +254,7 @@
       <br>
       <em> China Patent CN216266087U, </em> 2022 <font color="red"></font>
       <br>
-      <a href="https://patents.google.com/patent/CN216266087U/en">PDF</a>
+      <a href="https://patents.google.com/patent/CN113954111A/en">paper</a>
     </p>
   </td>
 </tr>
