--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       <strong>Jiahui Yang</strong>,
       <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Wenzeng Zhang</a>,
       <br>
-      <em> China Patent CN113954111A, </em> 2022 <font color="red"></font>
+      <em> China Invention Patent CN113954111A, </em> 2022 <font color="red"></font>
       <br>
       <a href="https://patents.google.com/patent/CN113954111A/en">paper</a>
     </p>
