--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
       <a href="https://www.cs.cmu.edu/~rsalakhu/">Ruslan Salakhutdinov</a>,
       <a href="https://www.cs.cmu.edu/~dpathak/">Deepak Pathak</a>
       <br>
+      <em> arXiv, </em> 2024 <font color="red"></font>
+      <br>
       <a href="https://arxiv.org/abs/2409.05864">arXiv</a> |
       <a href="https://mihdalal.github.io/neuralmotionplanner/">site</a> |
       <a href="https://github.com/mihdalal/neuralmotionplanner">code</a>
