--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <script type="text/javascript" src="js/hidebib.js"></script>
   <title>Jiahui(Jim) Yang</title>
   <meta name="Jiahui Yang" http-equiv="Content-Type" content="Jiahui Yang">
+  <meta name="google-site-verification" content="bFnM5rCdrrjoWXwBvMO7IuHb_ufaqlDjK0tL0TkENNU" />
   <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600,400italic,600italic,300,300italic' rel='stylesheet' type='text/css'>
   <!-- Start : Google Analytics Code -->
   <script>
