--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <td width="100%" valign="top">
     <p>
       <a href="https://mihdalal.github.io/neuralmotionplanner">
-        <papertitle>Neural MP: A Policy Learning Framework for Generalist <br>Neural Motion Planners</papertitle>
+        <papertitle>Neural MP: A Generalist Neural Motion Planner</papertitle>
       </a>
       <br>
       <a href="https://mihdalal.github.io/">Murtaza Dalal*</a>, 
