--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             aiming to build robust generalist robot agents that can deploy in the real world.
         </p>
         <p>
-            Previously, I worked closely with <a href="https://www.eecs.mit.edu/people/yufeng-kevin-chen/">Prof. Kevin Chen</a> at <a href="https://www.eecs.mit.edu/">MIT EECS</a>, <!--or <a href="https://www.rle.mit.edu/">MIT RLE</a> -->
+            Previously, I worked closely with <a href="https://www.eecs.mit.edu/people/yufeng-kevin-chen/">Prof. Kevin Chen</a> at <a href="https://www.eecs.mit.edu/">MIT</a>, <!--or <a href="https://www.rle.mit.edu/">MIT RLE</a> -->
             <a href="https://scholar.google.com/citations?user=HQ6j-KsAAAAJ&hl=en">Prof. Wei Zhang</a> at <a href="https://www.sustech.edu.cn/en/">SUSTech</a>, 
             and <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Prof. Wenzeng Zhang</a> at <a href="">Tsinghua University</a> (now at X-Institute).
         </p>
@@ -131,9 +131,10 @@
   <td style="padding:20px;width:100%;vertical-align:middle">
     <heading>News</heading>
    <p>
-    [09/2024] We <a href="https://www.linkedin.com/posts/carnegie-mellon-university_carnegie-mellon-university-welcomed-google-activity-7242316975455051776-ROwS?utm_source=share&utm_medium=member_desktop">demoed</a> Neural MP to the CEO of Google, Sundar Pichai, while he was visiting CMU!
+    [09/2024] We <a href="https://www.linkedin.com/posts/carnegie-mellon-university_carnegie-mellon-university-welcomed-google-activity-7242316975455051776-ROwS?utm_source=share&utm_medium=member_desktop">demoed</a> Neural MP and Bidex to the CEO of Google, Sundar Pichai, while he was visiting CMU!
    <br>
     [08/2023] Joined CMU RI as a graduate student.
+    [06/2023] Completed my bachelor's degree at SUSTech! I was awarded as the Top 10 Summa Cum Laude Graduates in the college of engineering!
    </p>
   </td>
 </tbody></table>
