--- a/index.html
+++ b/index.html
@@ -194,7 +194,11 @@
       <br>
       <em> Conference on Robot Learning (CoRL), </em> 2024 <font color="red"></font>
       <br>
-      <a href="https://bidex-teleop.github.io/">site</a>
+      <a href="https://openreview.net/pdf?id=55tYfHvanf">paper</a> |
+      <a href="https://bidex-teleop.github.io/">site</a> |
+      <a href="https://bidex-teleop.github.io/assembly">hardware</a> |
+      <a href="https://github.com/leap-hand/LEAP_Hand_API">software</a>
+      <a>
     </p>
   </td>
 </tr>
