--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       <a href="https://smrl.mit.edu/people/">Suhan Kim</a>,
       <a href="https://smrl.mit.edu/people/">Yi-Hsuan Hsiao</a>,
       <a href="https://www.eecs.mit.edu/people/jeffrey-lang/">Jeffrey Lang</a>,
-      <a href="ttps://www.eecs.mit.edu/people/yufeng-kevin-chen/">Yufeng Chen</a>,
+      <a href="ttps://www.eecs.mit.edu/people/yufeng-kevin-chen/">Yufeng Chen</a>
       <br>
       <em> International Conference on Robotics and Automation (ICRA), </em> 2023 <font color="red"></font>
       <br>
@@ -240,7 +240,7 @@
       <strong>Jiahui Yang</strong>,
       <a>Hua Chen</a>,
       <a>Haibo Lu</a>,
-      <a>Wei Zhang</a>,
+      <a>Wei Zhang</a>
       <br>
       <em> arXiv, </em> 2023 <font color="red"></font>
       <br>
@@ -259,7 +259,7 @@
       </a>
       <br>
       <strong>Jiahui Yang</strong>,
-      <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Wenzeng Zhang</a>,
+      <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Wenzeng Zhang</a>
       <br>
       <em> China Invention Patent CN113954111A, </em> 2022 <font color="red"></font>
       <br>
