--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
             Hi! I'm Jim, a second year Master's student (MSR) in the <a href="https://www.ri.cmu.edu/">Robotics Institute</a> at
             <a href="https://www.cmu.edu/">Carnegie Mellon University</a>, advised by 
             <a href="https://www.cs.cmu.edu/~dpathak/">Prof. Deepak Pathak</a>. I'm broadly interested in robotics and AI, 
-            aiming to build robust generalist robot agents that can deploy in the real world.
+            aiming to build robust, generalist robot agents that can deploy in the real world.
         </p>
         <p>
-            Previously, I worked closely with <a href="https://www.eecs.mit.edu/people/yufeng-kevin-chen/">Prof. Kevin Chen</a> at <a href="https://www.eecs.mit.edu/">MIT</a>, <!--or <a href="https://www.rle.mit.edu/">MIT RLE</a> -->
-            <a href="https://scholar.google.com/citations?user=HQ6j-KsAAAAJ&hl=en">Prof. Wei Zhang</a> at <a href="https://www.sustech.edu.cn/en/">SUSTech</a>, 
-            and <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Prof. Wenzeng Zhang</a> at <a href="">Tsinghua University</a> (now at X-Institute).
+            Prior to CMU, I worked closely with <a href="https://www.eecs.mit.edu/people/yufeng-kevin-chen/">Prof. Kevin Chen</a> at <a href="https://www.eecs.mit.edu/">MIT</a>, <!--or <a href="https://www.rle.mit.edu/">MIT RLE</a> -->
+            <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Prof. Wenzeng Zhang</a> at <a href="">Tsinghua University</a> (now at X-Institute), 
+            and <a href="https://scholar.google.com/citations?user=HQ6j-KsAAAAJ&hl=en">Prof. Wei Zhang</a> at <a href="https://www.sustech.edu.cn/en/">SUSTech</a>.
         </p>
         <p> Feel free to contact me via email! You can reach me at jiahuiya -at- andrew dot cmu dot edu</p>
         </p>
@@ -131,11 +131,15 @@
   <td style="padding:20px;width:100%;vertical-align:middle">
     <heading>News</heading>
    <p>
+    [11/2024] I am applying for PhD for Fall 2025.
+   <br>
     [09/2024] We <a href="https://www.linkedin.com/posts/carnegie-mellon-university_carnegie-mellon-university-welcomed-google-activity-7242316975455051776-ROwS?utm_source=share&utm_medium=member_desktop">demoed</a> Neural MP and Bidex to the CEO of Google, Sundar Pichai, while he was visiting CMU!
    <br>
     [08/2023] Joined CMU RI as a graduate student.
    <br>
     [06/2023] Completed my bachelor's degree at SUSTech! I was awarded as the Top 10 Summa Cum Laude Graduates in the college of engineering!
+   <br>
+    [06/2022] Finished a wonderful year at MIT as an exchange student.
    </p>
   </td>
 </tbody></table>
@@ -144,6 +148,9 @@
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
   <tr><td><sectionheading>&nbsp;&nbsp;Publications </sectionheading></td></tr>
+  <tr>
+    <td style="padding-left:20px;padding-top:10px;padding-bottom:20px;width:100%;vertical-align:middle">(* denotes equal contribution)</td>
+  </tr>
 </table>
 <!-- <p>* denotes equal contribution</p> -->
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
