--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
 <br/>
 
-<tr> <!--bgcolor="#ffffd0"-->
+<tr bgcolor="#ffffd0">
     <td width="33%" valign="top" align="center"><a href="https://mihdalal.github.io/neuralmotionplanner"><img src="images/nmp.gif"
         alt="sym" width="90%" style="border-radius:15px"></a></td>
   <td width="100%" valign="top">
@@ -181,7 +181,7 @@
   </td>
 </tr>
 
-<tr>
+<tr bgcolor="#ffffd0">
     <td width="33%" valign="top" align="center"><a href="https://bidex-teleop.github.io/"><img src="images/bidex.png"
         alt="Bidex" width="90%" style="border-radius:15px"></a></td>
   <td width="100%" valign="top">
