--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 </table>
 
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-  <td style="padding:20px;width:100%;vertical-align:middle">
-    <heading>News</heading>
+  <tr><td><sectionheading>&nbsp;&nbsp;News </sectionheading></td></tr>
+  <td>
    <p>
     [11/2024] I am applying for PhD for Fall 2025.
    <br>
