--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
 </table>
 
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-  <tr><td><sectionheading>&nbsp;&nbsp;News </sectionheading></td></tr>
-  <td>
+  <tr>
+  <td style="padding:20px;width:100%;vertical-align:middle">
+    <heading>News</heading>
    <p>
     [11/2024] I am applying for PhD for Fall 2025.
    <br>
@@ -142,6 +143,7 @@
     [06/2022] Finished a wonderful year at MIT as an exchange student.
    </p>
   </td>
+  </tr>
 </tbody></table>
 
 <hr/>
