--- a/index.html
+++ b/index.html
@@ -272,7 +272,8 @@
       <br>
       <em> China Invention Patent CN113954111A, </em> 2022 <font color="red"></font>
       <br>
-      <a href="https://patents.google.com/patent/CN113954111A/en">paper</a>
+      <a href="https://patents.google.com/patent/CN113954111A/en">paper</a> |
+      <a href="patent_certificate.pdf">certificate</a>
     </p>
   </td>
 </tr>
