--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
   <tr>
   <td style="padding:20px;width:100%;vertical-align:middle">
-    <heading>News</heading>
+    <sectionheading>News</sectionheading>
    <p>
     [11/2024] I am applying for PhD for Fall 2025.
    <br>
