--- a/index.html
+++ b/index.html
@@ -184,8 +184,9 @@
 </tr>
 
 <tr bgcolor="#ffffd0">
-    <td width="33%" valign="top" align="center"><a href="https://bidex-teleop.github.io/"><img src="images/bidex.png"
-        alt="Bidex" width="90%" style="border-radius:15px"></a></td>
+    <td width="33%" valign="top" align="center"><a href="https://bidex-teleop.github.io/">
+    <video autoplay loop muted src="https://bidex-teleop.github.io/resources/1/plate2.mp4" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;border:1px solid black"></video>
+    </a></td>
   <td width="100%" valign="top">
     <p>
       <a href="https://bidex-teleop.github.io/">
@@ -198,8 +199,8 @@
       <a href="https://www.mohansrirama.com/">Mohan Kumar Srirama</a>,
       <a>Ray Liu</a>,
       <a href="https://haoyu-x.github.io/">Haoyu Xiong</a>,
-      <a href="https://russellmendonca.github.io/">Russell Mendonca</a>,
-      <a href="https://www.cs.cmu.edu/~dpathak/">Deepak Pathak</a>
+      <a href="https://russellmendonca.github.io/">Russell Mendonca†</a>,
+      <a href="https://www.cs.cmu.edu/~dpathak/">Deepak Pathak†</a>
       <br>
       <em> Conference on Robot Learning (CoRL), </em> 2024 <font color="red"></font>
       <br>
