--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
       <br>
       <em> arXiv, </em> 2024 <font color="red"></font>
       <br>
-      <a href="https://arxiv.org/abs/2409.05864">arXiv</a> |
-      <a href="https://mihdalal.github.io/neuralmotionplanner/">site</a> |
+      <a href="https://arxiv.org/abs/2409.05864">paper</a> |
+      <a href="https://mihdalal.github.io/neuralmotionplanner/">website</a> |
       <a href="https://github.com/mihdalal/neuralmotionplanner">code</a>
     </p>
   </td>
@@ -205,7 +205,7 @@
       <em> Conference on Robot Learning (CoRL), </em> 2024 <font color="red"></font>
       <br>
       <a href="https://openreview.net/pdf?id=55tYfHvanf">paper</a> |
-      <a href="https://bidex-teleop.github.io/">site</a> |
+      <a href="https://bidex-teleop.github.io/">website</a> |
       <a href="https://bidex-teleop.github.io/assembly">hardware</a> |
       <a href="https://github.com/leap-hand/LEAP_Hand_API">software</a>
       <a>
