--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <a href="https://smrl.mit.edu/people/">Suhan Kim</a>,
       <a href="https://smrl.mit.edu/people/">Yi-Hsuan Hsiao</a>,
       <a href="https://www.eecs.mit.edu/people/jeffrey-lang/">Jeffrey Lang</a>,
-      <a href="ttps://www.eecs.mit.edu/people/yufeng-kevin-chen/">Yufeng Chen</a>
+      <a href="https://www.eecs.mit.edu/people/yufeng-kevin-chen/">Yufeng Chen</a>
       <br>
       <em> International Conference on Robotics and Automation (ICRA), </em> 2023 <font color="red"></font>
       <br>
