--- a/index.html
+++ b/index.html
@@ -260,20 +260,20 @@
 </tr>
 
 <tr>
-    <td width="33%" valign="top" align="center"><a href="https://patents.google.com/patent/CN113954111A/en"><img src="images/finger.png"
+    <td width="33%" valign="top" align="center"><a href="https://patents.google.com/patent/CN113954111B/en"><img src="images/finger.png"
         alt="Bidex" width="90%" style="border-radius:15px"></a></td>
   <td width="100%" valign="top">
     <p>
-      <a href="https://patents.google.com/patent/CN113954111A/en">
+      <a href="https://patents.google.com/patent/CN113954111B/en">
         <papertitle>Parallel connecting rod mode switching parallel clamp coupling self-adaptive robot finger device</papertitle>
       </a>
       <br>
       <strong>Jiahui Yang</strong>,
       <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Wenzeng Zhang</a>
       <br>
-      <em> China Invention Patent CN113954111A, </em> 2022 <font color="red"></font>
+      <em> China Invention Patent CN113954111B, </em> 2022 <font color="red"></font>
       <br>
-      <a href="https://patents.google.com/patent/CN113954111A/en">paper</a> |
+      <a href="https://patents.google.com/patent/CN113954111B/en">paper</a> |
       <a href="patent_certificate.pdf">certificate</a>
     </p>
   </td>
