--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   </p>
 
   <tr>
-    <td width="32%" valign="top"><a href="images/profile_pic.jpg"><img src="images/profile_pic.jpg" width="100%" style="border-radius:15px"></a>
+    <td width="32%" valign="top"><a href="images/profile_pic.png"><img src="images/profile_pic.png" width="100%" style="border-radius:15px"></a>
     <p align=center>
     <a href="CV_Jiahui_Yang.pdf">CV</a> |
     <a href="https://scholar.google.com/citations?user=4w2l0uEAAAAJ&hl=en">Google Scholar</a>  |
@@ -111,15 +111,19 @@
     <td width="68%" valign="top" align="justify">
 
         <p>
-            Hi! I'm Jim, a second year Master's student (MSR) in the <a href="https://www.ri.cmu.edu/">Robotics Institute</a> at
+            Hi! I'm Jim, a graduate researcher in the <a href="https://www.ri.cmu.edu/">Robotics Institute</a> at
             <a href="https://www.cmu.edu/">Carnegie Mellon University</a>, advised by 
-            <a href="https://www.cs.cmu.edu/~dpathak/">Prof. Deepak Pathak</a>. I'm broadly interested in robotics and AI, 
-            aiming to build robust, generalist robot agents that can deploy in the real world.
+            <a href="https://www.cs.cmu.edu/~dpathak/">Prof. Deepak Pathak</a> and <a href="https://www.cs.cmu.edu/~rsalakhu/">Prof. Ruslan Salakhutdinov</a>. 
         </p>
         <p>
             Prior to CMU, I worked closely with <a href="https://www.eecs.mit.edu/people/yufeng-kevin-chen/">Prof. Kevin Chen</a> at <a href="https://www.eecs.mit.edu/">MIT</a>, <!--or <a href="https://www.rle.mit.edu/">MIT RLE</a> -->
-            <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Prof. Wenzeng Zhang</a> at <a href="">Tsinghua University</a> (now at X-Institute), 
+            <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Prof. Wenzeng Zhang</a> at <a href="https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a> (now at X-Institute), 
             and <a href="https://scholar.google.com/citations?user=HQ6j-KsAAAAJ&hl=en">Prof. Wei Zhang</a> at <a href="https://www.sustech.edu.cn/en/">SUSTech</a>.
+        </p>
+        <p>
+          I'm broadly interested in robotics and AI, with a focus on leveraging large-scale simulation to advance data-driven learning for robotics. 
+          My current work draws on imitation and reinforcement learning, with applications in motion planning and dexterous manipulation. 
+          Ultimately, I aim to move towards general-purpose robot agents that can be deployed in the real-world.
         </p>
         <p> Feel free to contact me via email! You can reach me at jiahuiya -at- andrew dot cmu dot edu</p>
         </p>
@@ -132,7 +136,11 @@
   <td style="padding:20px;width:100%;vertical-align:middle">
     <sectionheading>News</sectionheading>
    <p>
-    [11/2024] I am applying for PhD for Fall 2025.
+    [09/2025] I am applying for PhD for Fall 2026.
+   <br>
+    [08/2025] DRP is accepted to CoRL 2025.
+   <br>
+    [06/2025] Neural MP is accepted to IROS 2025.
    <br>
     [09/2024] We <a href="https://www.linkedin.com/posts/carnegie-mellon-university_carnegie-mellon-university-welcomed-google-activity-7242316975455051776-ROwS?utm_source=share&utm_medium=member_desktop">demoed</a> Neural MP and Bidex to the CEO of Google, Sundar Pichai, while he was visiting CMU!
    <br>
@@ -159,6 +167,31 @@
 <br/>
 
 <tr bgcolor="#ffffd0">
+  <td width="33%" valign="top" align="center"><a href="https://deep-reactive-policy.com"><img src="images/drp.gif"
+      alt="sym" width="90%" style="border-radius:15px"></a></td>
+<td width="100%" valign="top">
+  <p>
+    <a href="https://deep-reactive-policy.com">
+      <span class="papertitle">Deep Reactive Policy: Learning Reactive Manipulator Motion Planning for Dynamic Environments</span>
+    </a>
+    <br>
+    <strong>Jiahui Yang*</strong>,
+    Jason Jingzhou Liu*,
+    Yulong Li,
+    Youssef Khaky,
+    Kenneth Shaw,
+    Deepak Pathak
+    <br>
+    <em> Conference on Robot Learning (CoRL), </em> 2025 <font color="red"></font>
+    <br>
+    <a href="">paper</a> |
+    <a href="https://deep-reactive-policy.com">website</a> |
+    <a href="">code</a>
+  </p>
+</td>
+</tr>
+
+<tr bgcolor="#ffffd0">
     <td width="33%" valign="top" align="center"><a href="https://mihdalal.github.io/neuralmotionplanner"><img src="images/nmp.gif"
         alt="sym" width="90%" style="border-radius:15px"></a></td>
   <td width="100%" valign="top">
@@ -167,14 +200,14 @@
         <papertitle>Neural MP: A Generalist Neural Motion Planner</papertitle>
       </a>
       <br>
-      <a href="https://mihdalal.github.io/">Murtaza Dalal*</a>, 
+      Murtaza Dalal*,
       <strong>Jiahui Yang*</strong>,
-      <a href="https://russellmendonca.github.io/">Russell Mendonca</a>,
-      <a href="https://www.linkedin.com/in/youssefkhaky/">Youssef Khaky</a>,
-      <a href="https://www.cs.cmu.edu/~rsalakhu/">Ruslan Salakhutdinov</a>,
-      <a href="https://www.cs.cmu.edu/~dpathak/">Deepak Pathak</a>
+      Russell Mendonca,
+      Youssef Khaky,
+      Ruslan Salakhutdinov,
+      Deepak Pathak
       <br>
-      <em> arXiv, </em> 2024 <font color="red"></font>
+      <em> International Conference on Intelligent Robots and Systems (IROS), </em> 2025 <font color="red">(Oral)</font>
       <br>
       <a href="https://arxiv.org/abs/2409.05864">paper</a> |
       <a href="https://mihdalal.github.io/neuralmotionplanner/">website</a> |
@@ -193,14 +226,14 @@
         <papertitle>Bimanual Dexterity for Complex Tasks</papertitle>
       </a>
       <br>
-      <a href="https://kennyshaw.net/">Kenneth Shaw*</a>,
-      <a href="https://yulongli42.github.io/">Yulong Li*</a>,
+      Kenneth Shaw*,
+      Yulong Li*,
       <strong>Jiahui Yang</strong>,
-      <a href="https://www.mohansrirama.com/">Mohan Kumar Srirama</a>,
-      <a>Ray Liu</a>,
-      <a href="https://haoyu-x.github.io/">Haoyu Xiong</a>,
-      <a href="https://russellmendonca.github.io/">Russell Mendonca†</a>,
-      <a href="https://www.cs.cmu.edu/~dpathak/">Deepak Pathak†</a>
+      Mohan Kumar Srirama,
+      Ray Liu,
+      Haoyu Xiong,
+      Russell Mendonca†,
+      Deepak Pathak†
       <br>
       <em> Conference on Robot Learning (CoRL), </em> 2024 <font color="red"></font>
       <br>
@@ -222,12 +255,12 @@
         <papertitle>A lightweight high-voltage boost circuit for soft-actuated micro-aerial-robots</papertitle>
       </a>
       <br>
-      <a href="https://zhijianr.mit.edu/">Zhijian Ren</a>,
+      Zhijian Ren,
       <strong>Jiahui Yang</strong>,
-      <a href="https://smrl.mit.edu/people/">Suhan Kim</a>,
-      <a href="https://smrl.mit.edu/people/">Yi-Hsuan Hsiao</a>,
-      <a href="https://www.eecs.mit.edu/people/jeffrey-lang/">Jeffrey Lang</a>,
-      <a href="https://www.eecs.mit.edu/people/yufeng-kevin-chen/">Yufeng Chen</a>
+      Suhan Kim,
+      Yi-Hsuan Hsiao,
+      Jeffrey Lang,
+      Yufeng Chen
       <br>
       <em> International Conference on Robotics and Automation (ICRA), </em> 2023 <font color="red"></font>
       <br>
@@ -245,12 +278,12 @@
         <papertitle>Coordinated Defense Allocation in Reach-Avoid Scenarios with Efficient Online Optimization</papertitle>
       </a>
       <br>
-      <a>Junwei Liu</a>,
-      <a>Zikai Ouyang</a>,
+      Junwei Liu,
+      Zikai Ouyang,
       <strong>Jiahui Yang</strong>,
-      <a>Hua Chen</a>,
-      <a>Haibo Lu</a>,
-      <a>Wei Zhang</a>
+      Hua Chen,
+      Haibo Lu,
+      Wei Zhang
       <br>
       <em> arXiv, </em> 2023 <font color="red"></font>
       <br>
@@ -269,7 +302,7 @@
       </a>
       <br>
       <strong>Jiahui Yang</strong>,
-      <a href="https://scholar.google.com/citations?user=n-3doEMAAAAJ&hl=en">Wenzeng Zhang</a>
+      Wenzeng Zhang
       <br>
       <em> China Invention Patent CN113954111B, </em> 2022 <font color="red"></font>
       <br>
@@ -283,9 +316,11 @@
 <hr/>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="2">
-    <tr><td><br><p align="right"><font size="1.5">
+    <tr><td><br><p align="right"><font size="2">
     Modified version of template from <a href="http://www.cs.berkeley.edu/~barron/">here</a>
-    </font></p></td></tr>
+    <br>
+    Last updated: Sep 2025
+  </font></p></td></tr>
 </table>
 
   </td></tr>
