--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <br>
     <em> Conference on Robot Learning (CoRL), </em> 2025 <font color="red"></font>
     <br>
-    <a href="">paper</a> |
+    <a href="https://arxiv.org/abs/2509.06953">paper</a> |
     <a href="https://deep-reactive-policy.com">website</a> |
     <a href="">code</a>
   </p>
