--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
       Deepak Pathak
       <br>
       <em> International Conference on Intelligent Robots and Systems (IROS), </em> 2025 <font color="red">(Oral)</font>
+      <font color="red">Best Paper Award Finalist</font>
+      <br>
+      <font color="red">Best Student Paper Award Finalist</font>
       <br>
       <a href="https://arxiv.org/abs/2409.05864">paper</a> |
       <a href="https://mihdalal.github.io/neuralmotionplanner/">website</a> |
