--- a/index.html
+++ b/index.html
@@ -313,10 +313,9 @@
       <strong>Jiahui Yang</strong>,
       Wenzeng Zhang
       <br>
-      China Invention Patent CN113954111B 2022
+      Invention Patent CN113954111B 2022
       <br>
-      <a href="https://patents.google.com/patent/CN113954111B/en">paper</a> |
-      <a href="patent_certificate.pdf">certificate</a>
+      <a href="https://patents.google.com/patent/CN113954111B/en">paper</a>
     </p>
   </td>
 </tr>
